--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -3,5 +3,7 @@
   "item.mccourse.raw_pink_garnet": "Raw Pink Garnet",
 
   "block.mccourse.pink_garnet_block": "Block of Pink Garnet",
-  "block.mccourse.raw_pink_garnet_block": "Block of Pink Garnet"
+  "block.mccourse.raw_pink_garnet_block": "Block of Pink Garnet",
+
+  "itemgroup.pink_garnet_group": "Pink Garnet Course Group"
 }
