--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -10,5 +10,8 @@
   "block.mccourse.nether_pink_garnet_ore": "Nether Pink Garnet Ore",
   "block.mccourse.end_stone_pink_garnet_ore": "End Stone Pink Garnet Ore",
 
-  "itemgroup.pink_garnet_group": "Pink Garnet Course Group"
+  "itemgroup.pink_garnet_group": "Pink Garnet Course Group",
+
+  "item.mccourse.metal_detector": "Metal Detector",
+  "item.mccourse.metal_detector.no_valuables": "No valuables found!"
 }
